# celox

./: .gitignore  README.md  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: tests.yaml
celer/: __init__.py  abc.py  client.py  client_exceptions.py  cookiejar.py  defaults.py  exceptions.py  parser.py  proxy.py  request.py  response.py  timeout.py  typedefs.py  util.py
celer/tests/: test_connection.py  test_handler.py  test_parser.py
celox/: __init__.py  client.py  connection.py  cookiejar.py  defaults.py  exceptions.py  request.py  response.py  timeout.py  util.py
examples/: basic.py  quickstart.py  timeout.py
tests/: conftest.py  test_client.py  test_connection.py  test_handler.py  test_httpconnection.py  test_parser.py  test_proxy.py  test_response.py  test_util.py
