[metadata]
name = celer
version = attr: celer.__version__
author = 418Coffee
author_email = 418Coffee@cartinese.com
description = Fast, minimalistic HTTP client using trio.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/418Coffee/celer
project_urls =
    Bug Tracker = https://github.com/418Coffee/celer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
