[metadata]
name = celer
version = attr: celer.__version__
author = 418Coffee
author_email = 418Coffee@cartinese.com
description = Fast, minimalistic HTTP client using trio.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/418Coffee/celer
project_urls =
    Bug Tracker = https://github.com/418Coffee/celer/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
    trio>=0.20.0
python_requires = >=3.8

[options.package_data]
celer = py.typed

[tool:pytest]
trio_mode = true
addopts = "--cov=celer"
testpaths =
    tests
# log_cli = true

[flake8]
per-file-ignores =
    cookiejar.py: W503, E203
max-line-length = 160
exclude = 
    .git,
    __pycache__,
    dist,
    tests

[mypy]
mypy_path = "."
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
