[metadata]
name = celox
version = attr: celox.__version__
author = 418Coffee
author_email = 418Coffee@cartinese.com
description = Fast, minimalistic HTTP client using trio.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/418Coffee/celox
project_urls =
    Bug Tracker = https://github.com/418Coffee/celox/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
    trio>=0.20.0
python_requires = >=3.8

# github actions
[gh-actions]
python = 
    3.8: py38, flake8, mypy
    3.9: py39

# pytest, flake8, mpyp and tox

[options.package_data]
celox = py.typed

[tool:pytest]
trio_mode = true
addopts = "--cov=celox" 
testpaths =
    tests
# log_cli = true

# We don't need to test cookiejar.py it's from aiohttp.
[coverage:run]
omit = celox/cookiejar.py

[flake8]
per-file-ignores =
    cookiejar.py: W503, E203
max-line-length = 160
exclude = 
    .git,
    __pycache__,
    dist,
    tests,
    .tox

[mypy]
mypy_path = "."
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tox:tox]
minversion = 3.24.5
envlist = py38, py39, flake8, mypy
isolated_build = true

[testenv]
setenv = 
    PYTHONPATH = {toxinidir}
deps =
    -r {toxinidir}/requirements_dev.txt
commands =
    pytest --basetemp={envtmpdir}

[testenv:flake8]
basepython = python3.8
deps = flake8
commands = flake8

[testenv:mypy]
basepython = python3.8
deps = 
    -r {toxinidir}/requirements_dev.txt
commands = mypy celox